Carousel overflow corrected

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -173,7 +173,8 @@ header {
 
 .reviews__carousel {
 	max-width: 600px;
-	width: 100%;
+	width: 100vw;
+	overflow: hidden;
 	margin: 0 auto;
 	cursor: grab;
 	margin-bottom: 50px;
